<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Market</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount\u00A0</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="nameColumn">Description</string>
    <string name="priceColumn">Price</string>
    <string name="amtColumn">Amt</string>
    <string name="card">Card</string>
    <string name="buy">Buy</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="empty"/>
    <string name="addItem">Add Item</string>
</resources>
