<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/textAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/amtColumn" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/priceColumn" />

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/soldType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/space"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/button_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                style="@style/AppThemeLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/ok" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/AppThemeLight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>